add: InsufficientSlidePreviewDto 생성 및 기존 dto에 추가